gobmkida/c3/close_bubbles
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/close_bubbles/src/engine/score.c:659:11: error: use of undeclared identifier 'byte_9C689F'
|| ( v6 = byte_9C689F[v3], v6 != 3) && v16[v3 + 19] == 3 
          ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/close_bubbles/src/engine/score.c:660:11: error: use of undeclared identifier 'byte_9C688C'
|| ( v7 = byte_9C688C[v3], v7 != 3) && v16[v3] == 3 
          ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/close_bubbles/src/obj/1/score.o] Error 1
